--- a/index.html
+++ b/index.html
@@ -60,41 +60,54 @@ body, html {
   </div> 
 </header>
 
-<!-- About Section -->
-<div class="w3-container" style="padding:128px 16px" id="tuber">
-  <h3 class="w3-center w3-xxlarge">Mycobacterium tuberculosis</h3>
-  <div class="w3-row-padding w3-center" style="margin-top:64px">
-    <div class="w3-third">
-      <b class="w3-xlarge">Características da bactéria</b>
-      <p>As bactérias do género Mycobacterium são bacilos (pleomórficos) gram positivo retos ou encurvados, cocobacilos, filamentosos ou formas ramificadas. Este organismo tem um comprimento de aproximadamente 1 a 10 μm, uma largura entre 0.2 e 0.6 μm e não formam esporo, flagelo ou cápsula. Apresenta uma parede complexa quanto à sua composição química, Lipídios de natureza hidrofóbica para a parede e ainda Bacilos Álcool Ácidos Resistentes (BAAR). Estas bactérias são intracelulares que infetam e proliferam-se no interior de macrófagos e linfócitos.</p>
-    </div>
-    <div class="w3-third">
-      <b class="w3-xlarge">Tuberculose</b>
-      <p>A Tuberculose é a responsável pela morte de mais de 1 bilião de pessoas nos últimos 200 anos, esta doença cronica infeciosa é provocada pela bactéria Mycobacterium tuberculosis. Esta bactéria propaga-se pelo ar, quando uma pessoa infetada tosse, espirra, fala ou expele saliva podendo ser inalada por outro individuo. O sucesso da infeção e do desenvolvimento de tuberculose depende da sucessão de 4 passos: a fagocitose do bacilo, a multiplicação multicelular, o período de latência da infeção e da infeção ativa do pulmão.<br>
-        Atualmente a Tuberculose continua a ser responsável pelo maior número de mortes provocadas por um único agente infecioso, causando cerca de 10,4 milhões de novos casos e 1,7 milhão de mortes por ano. O controlo da Tuberculose é dificultado pelo facto de depender amplamente de uma técnica de diagnostico microscópica com 120 anos com baixa sensibilidade, de uma vacina com 100 anos com eficácia limitada e medicamentos com 40 e 60 anos. </p>
-    </div>
-    <div class="w3-third">
-      <b class="w3-xlarge">Ciclo de vida da bactéria</b>
-      <p>A resposta imunológica para a Mycobacterium tuberculosis não é completamente eficaz. Esta leva a bactéria para um estado latente, mas raramente a elimina. Infelizmente o estado latente da Mycobacterium tuberculosis é reversível, e a reativação da tuberculose é a fonte da maioria das transmissões. A infeção da tuberculose acontece em 4 etapas: A resposta inicial dos macrófagos, a etapa de crescimento, a etapa de controlo imunológico e a etapa do abcesso pulmonar. Estas quatro etapas ocorrem em cerca de 1 mês.</p>
-    </div>
-  </div>
-</div>
 
-
-<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;">
+<div class="w3-container" style="padding:60px 16px"  id="tuber"></div>
   <h3 class="w3-center w3-xxlarge">Mycobacterium tuberculosis</h3>
-  <div class="w3-row-padding" style="margin-top:64px">
+  <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
-      <div class="w3-card">
-        <img src="images/genoma.png" alt="genoma" style="width:100%">
-      </div>
+      <img src="images/Mycobacterium tuberculosis.jpg" alt="genoma" style="width:100%">
     </div>
-    <div class="w3-col l4 m9" style="margin-left:10%">
-      <p> O genoma é rico em DNA repetitivo, particularmente sequencias de inserção, e em novas famílias multígenas e genes de manutenção duplicados. O conteúdo G + C é relativamente constante em todo o genoma, indicando que ilhas de patogenicidade transferidas horizontalmente de composição de base atípica estão provavelmente ausentes. Estes correspondem a sequências pertencentes a uma grande família de genes que inclui as sequências polimórficas ricas em G + C (PGRSs).</h4>
-      <p> O círculo externo mostra a escala em Mb, onde 0 representa a origem da replicação. O primeiro anel exterior denota as posições de genes de RNA estáveis (tRNAs são azuis, outros são rosa) e a região de repetição direta (cubo rosa); o segundo anel de fora para dentro mostra a sequência de codificação por fita (sentido horário, verde escuro; sentido anti-horário, verde claro); o terceiro anel representa DNA repetitivo (sequências de inserção, laranja; família 13E12 REP, rosa escuro; profago, azul); o quarto anel mostra as posições dos membros da família do PPE (verde); o quinto anel mostra os membros da família PE (roxo, excluindo PGRS); e o sexto anel mostra as posições das sequências PGRS (vermelho escuro). O histograma (centro) representa o conteúdo de G + C, com &lt; 65% G + C em amarelo e &gt; 65% G + C em vermelho. A figura foi gerada com software da DNASTAR.</p>    
+    <div class="w3-col l4 m9" style="margin-left:5%">
+      <b class="w3-xlarge">Características da bactéria</b>
+      <p>As bactérias do género Mycobacterium são bacilos (pleomórficos) gram positivo retos ou encurvados, cocobacilos, filamentosos ou formas ramificadas. Este organismo tem um comprimento de aproximadamente 1 a 10 μm, uma largura entre 0.2 e 0.6 μm e não formam esporo, flagelo ou cápsula. Apresenta uma parede complexa quanto à sua composição química, Lipídios de natureza hidrofóbica para a parede e ainda Bacilos Álcool Ácidos Resistentes (BAAR). Estas bactérias são intracelulares que infetam e proliferam-se no interior de macrófagos e linfócitos.</p>   
+    </div>
+    <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
+      <div class="w3-second">
+        <b class="w3-xlarge">Tuberculose</b>
+        <p>A Tuberculose é a responsável pela morte de mais de 1 bilião de pessoas nos últimos 200 anos, esta doença cronica infeciosa é provocada pela bactéria Mycobacterium tuberculosis. Esta bactéria propaga-se pelo ar, quando uma pessoa infetada tosse, espirra, fala ou expele saliva podendo ser inalada por outro individuo. O sucesso da infeção e do desenvolvimento de tuberculose depende da sucessão de 4 passos: a fagocitose do bacilo, a multiplicação multicelular, o período de latência da infeção e da infeção ativa do pulmão.<br>
+          Atualmente a Tuberculose continua a ser responsável pelo maior número de mortes provocadas por um único agente infecioso, causando cerca de 10,4 milhões de novos casos e 1,7 milhão de mortes por ano. O controlo da Tuberculose é dificultado pelo facto de depender amplamente de uma técnica de diagnostico microscópica com 120 anos com baixa sensibilidade, de uma vacina com 100 anos com eficácia limitada e medicamentos com 40 e 60 anos.</p>
+        <b class="w3-xlarge">Sintomas</b>
+        <p>Os sintomas da tuberculose estão principalmente relacionados com o desenvolvimento da bactéria nos pulmões, podendo haver tosse seca e persistente com ou sem sangue, perda de peso, dor no peito ao tossir e dificuldade respiratória. No entanto, quando a bactéria desenvolve-se em outros órgãos, é possível que surjam outros sintomas como cansaço excessivo, suor noturno, febre e inchaço no local em que a bactéria está instalada.</p>
+        <b class="w3-xlarge">Ciclo de vida da bactéria</b>
+        <p>A resposta imunológica para a Mycobacterium tuberculosis não é completamente eficaz. Esta leva a bactéria para um estado latente, mas raramente a elimina. Infelizmente o estado latente da Mycobacterium tuberculosis é reversível, e a reativação da tuberculose é a fonte da maioria das transmissões (7). A infeção da tuberculose acontece em 4 etapas: A resposta inicial dos macrófagos, a etapa de crescimento, a etapa de controlo imunológico e a etapa do abcesso pulmonar. Estas quatro etapas ocorrem em cerca de 1 mês.</p>
+      </div>
     </div>
   </div>
 </div>
+
+<!-- About Section -->
+<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;">
+  <h3 class="w3-center w3-xxlarge">Genes</h3>
+  <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
+    <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
+      <img src="images/imagem_murA_MT_nowhite" alt="genoma" style="width:100%">
+    </div>
+    <div class="w3-col l4 m9" style="margin-left:5%">
+      <b class="w3-xlarge">murA</b>
+      <p>Proteína: UDP-N-acetylglucosamine 1-carboxyvinyltransferase</p>  
+      <p>Gene: murA</p> 
+      <p>Organismo: Mycobacterium tuberculosis</p>
+      <p>Localização subcelular:  Citoplasma e Citosol</p>
+      <p>Função Biológica: Formação da parede celular. Adiciona enolpiruvil a UDP-N-acetilglucosamina.</p>
+      <b>Sequência</b>
+      <p>Comprimento: 418</p>
+      <p>Massa(Da): 44,064</p>
+      <p><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_000962.3?report=fasta&log$=seqview&format=text&from=1470321&to=1471577" target="_blank" >Sequência DNA</a></p>
+      <p><a href="https://www.uniprot.org/uniprot/P9WJM1.fasta" target="_blank" >Sequência da proteina</a></p>
+    </div>
+  </div>
+</div>
+
 
 
 
@@ -102,54 +115,32 @@ body, html {
 <div class="w3-container" style="padding:128px 16px" id="aureus">
   <h3 class="w3-center w3-xxlarge"> Staphylococcus aureus</h3>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
-    <div class="w3-col l3 m6 w3-margin-bottom" style="margin-left:10%">
-      <div class="w3-card">
-        <img src="images/aureus_img.png" alt="aureus_img" style="width:150%">
-      </div>
+    <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:10%">
+      <img src="images/aureus_e_tabela.png" alt="aureus_img" style="width:100%">
     </div>
-    <div class="w3-col l4 m9" style="margin-left:15%">
-      <b class="w3-xlarge">Características da bactéria</b>
-      <p> Staphylococcus aureus (S. aureus) é uma bactéria esférica gram-positiva, da família Micrococ-caceae, responsável por várias infeções locais e sistémicas em seres humanos. Estas bactérias possuem aproximadamente um diâmetro de 0,5 a 1,5 µm. A forma de cocos é representativa desta bactéria. São imóveis e não-esporuladas.</h4>
-      <p> O uso contínuo de antibióticos contra esta bactéria resulta no desenvolvimento de cepas re-sistentes. Atualmente, a mupirocina (MUP) é o antibiótico escolhida contra a S. aureus e MDR (resistente à meticilina). </p>    
+    <div class="w3-col l4 m9" style="margin-left:5%">
+      <p> Staphylococcus aureus (S. aureus) é uma bactéria esférica gram-positiva, da família Micrococcaceae, responsável por várias infeções locais e sistémicas em seres humanos. Estas bactérias possuem aproximadamente um diâmetro de 0,5 a 1,5 µm e são caraterizadas pela forma de cocos, falta de mobilidade e serem não-esporuladas.</h4> 
+      <p> Os seres humanos são um reservatório natural de S. aureus e estima-se que cerca de 30% a 50% da população adulta saudável se encontra infetada, entre os quais 10% a 20% são infetados de forma persistente. Estas pessoas apresentam um risco mais elevado de infeções subsequentes. </p>
+      <p> Por ser um agente patogénico oportunista, esta bactéria constituí uma das principais causas de doenças nosocomiais como: como bacteremia-sepse, endocardite, pneumonia, osteomielite, artrite e doenças de pele. </p>   
+      <p> O uso contínuo de antibióticos contra esta bactéria resulta no desenvolvimento de cepas resistentes. Atualmente, a mupirocina (MUP) é o antibiótico escolhida contra a S. aureus e MDR (resistente à meticilina). </p>
     </div>
   </div>
 </div>
 
-<div class="w3-container w3-light-grey" style="padding:128px 16px">
-  <h3 class="w3-center w3-xxlarge"> Staphylococcus aureus</h3>
+<div class="w3-container w3-light-grey" style="padding:128px 16px" id="tuber">
+  <h3 class="w3-center w3-xxlarge"> Staphylococcus aureus </h3>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
-    <div class="w3-third">
-      <b class="w3-xlarge">Doenças Associadas</b>
-      <p>Os seres humanos são um reservatório natural de S. aureus e estima-se que cerca de 30% a 50% da população adulta saudável se encontra infetada, entre os quais 10% a 20% são infetados de forma persistente. Estas pessoas apresentam um risco mais elevado de infeções subsequentes.</p>
-      <p>Por ser um agente patogénico oportunista, esta bactéria constitui uma das principais causas de doenças nosocomiais como: bacteremia-sepse, endocardite, pneumonia, osteomielite, artrite e doenças de pele. São transmitidas pelo contacto direto com uma pessoa infetada, pela utilização de um objeto contaminado ou pela inalação de pequenas gotículas infetadas dispersas ao espirrar ou tossir.</p>
-      <p>O tratamento de infeções causadas por S. aureus é um desafio hospitalar devido à resistência adquirida rapidamente pelo organismo à maioria dos antibióticos. Uma forma de prevenção é a desinfeção/lavagem adequada das mãos.</p>
+    <div class="w3-second">
+      <b class="w3-xlarge">ileS</b>
+      <p> A função biológica desta protéina consiste em catalisar a ligação da isoleucina ao tRNA (Ile). IleS é um tipo de aminoácido-tRNA sintetase (AaRS) que está presente em S. aureus por meio do qual a mipirocina (MUP) mostra sua atividade antimicrobiana. Esta proteína pertence à classe I de tRNA sintetases, que são caracterizadas por uma ligação de ATP. O seu mecanismo de ação envolve interferir com a síntese de proteínas bacterianas por meio da inibição irreversível e competitiva de IleS. A inibição de IleS leva à acumulação da isoleucil-tRNA não carregado responsável pela síntese de pentafosfato de guanosina de alarmona. A resposta rigorosa da alarmona restringe a síntese de RNA. 
+Devido ao uso continuo de antibióticos ao longo dos anos, S. aureus adquiriu resistência contra MUP devido à mutação da proteína isoleucil-tRNA sintetase (IleS).  </p>
     </div>
-    <div class="w3-third">
-      <b class="w3-xlarge">Principais sintomas da intoxicação por S. aureus</b>
-      <p>Os sintomas de intoxicação por S. aureus surgem, dependendo da quantidade de toxina in-gerida, entre 1 e 7 horas após o consumo do alimento contaminado. Considera-se que S. au-reus tem que estar presente numa concentração mínima de 105 a 106 gramas por grama de alimento para que exista uma quantidade de toxina suficiente para causar doença. Quando em condições favoráveis, esta bactéria produz toxinas - enterotoxinas - que são o agente responsável pela intoxicação alimentar. Os sintomas mais comuns são náuseas e vómitos, por vezes acompanhados por diarreia e dores abdominais. A evolução clínica é, regra geral, favo-rável e os sintomas desaparecem normalmente ao fim de 48h.</p>
-    </div>
-    <div class="w3-third">
-      <b class="w3-xlarge">Ciclo de vida da bactéria</b>
-      <p>Uma caraterística curiosa destas bactérias é que são resistentes a ciclos de congelação/descongelação e sobrevivem durante períodos alargados de tempo em alimentos armazenados a temperaturas inferiores a –20ºC. S. aureus tem a capacidade de crescer em ambientes com temperaturas entre 7 e 46°C e tem uma temperatura ótima de crescimento entre 35 e 37°C. A produção de enterotoxina ocorre a temperaturas entre 10 e 45°C. A bactéria em si é destruída pela pasteurização, mas as enterotoxinas já formadas são resistentes aos processos térmicos, incluindo os regimes utilizados para esterilizar enlatados de baixa-acidez.</p>
+    <div class="w3-second">
+      <b class="w3-xlarge">murA</b>
+      <p>  </p>
     </div>
   </div>
 </div>
-
-<div class="w3-container" style="padding:128px 16px" id="aureus">
-  <h3 class="w3-center w3-xxlarge"> Staphylococcus aureus</h3>
-  <div class="w3-row-padding w3-center" style="margin-top:64px;display: flex;flex-direction: column;align-items: center;">
-    <div class="w3-col l6 m6 w3-margin-bottom">
-      <div class="w3-card">
-        <img src="images/genoma_aureus.png" alt="genoma_aureus" style="width:100%">
-      </div>
-    </div>
-    <div class="w3-col l4 m9" style="width: 80%;">
-      <b class="w3-xlarge">Características da bactéria</b>
-      <p> Recentemente descobriu-se um representante da epidemia de S. aureus resistente à meticilina, o clone EMRSA-16 (MRSA252), clinicamente importante; e um representante de um clone de S. aureus suscetível à meticilina adquirido pela comunidade invasiva (MSSA476). As sequências de genoma de MRSA252 e MSSA476 têm uma estrutura bem conservada na região central, mas diferem marcadamente nos seus elementos genéticos acessórios. MRSA252 é a cepa de S. aureus geneticamente diversa sequenciada até ao momento: 6% do genoma é novo em comparação com outros genomas publicados e contém vários elementos genéticos únicos. MSSA476 é suscetível à meticilina, como foi dito anteriormente, mas contém um novo elemento semelhante a mec do cassete estafilocócico cromossômico (SCC) (designado SCC476), que está integrado no mesmo local do cromossoma, como elementos SCCmec em cepas de MRSA, mas codifica uma proteína de resistência ao ácido fusídico putativa.  O papel crucial que os elementos acessórios desempenham na rápida evolução do S. aureus é claramente ilustrado comparando o genoma MSSA476 com o de uma cepa adquirida na comunidade de MRSA, extremamente relacionada; a distribuição diferencial de grandes elementos móveis com determinantes de virulência e resistência aos medicamentos pode ser responsável pelas diferenças fenotípicas clinicamente importantes nessas cepas. </p>    
-    </div>
-  </div>
-</div>
-
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
