--- a/index.html
+++ b/index.html
@@ -137,10 +137,14 @@ Devido ao uso continuo de antibióticos ao longo dos anos, S. aureus adquiriu re
     </div>
     <div class="w3-second">
       <b class="w3-xlarge">mprF</b>
-      <p> Proteína: Phosphatidylglycerol lysyltransferase
-      <p> Gene: mprF
-      <p> Organismo: Staphylococcus aureus
-      <p> Localização subcelular: Membrana plasmática
+      <p> Gene: mprF</p>
+      <p> Proteína: Phosphatidylglycerol lysyltransferase</p>
+      <p> Organismo: Staphylococcus aureus</p>
+      <p> Localização subcelular: Membrana plasmática</p>
+      <p> Comprimento: 840</p>
+      <p> Massa (Da): 96,866</p>
+      <p><a href="https://www.uniprot.org/uniprot/Q2G2M2.fasta" target="_blank" >Sequência DNA</a></p>
+      <p><a href="" target="_blank" >Sequência da proteina</a></p>
       <p> Esta protéina é responsável pela transferência de um grupo lisil de L-lisil-tRNA (Lys) para o fosfatidilglicerol ligado à membrana (PG), produzindo  lisilfosfatidilglicerol (LPG), um componente fundamental da membrana bacteriana com uma carga líquida positiva. A síntese do LPG contribui para a virulência da bactéria por estar envolvida no mecanismo de resistência aos peptídeos antimicrobianos catiónicos (CAMP) produzidos pelo sistema imunológico do hospedeiro e pelos microrganismos concorrentes. Mais precisamente, a modificação do fosfatidilglicerol aniónico com L-lisina carregada positivamente resulta na repulsão dos peptídeos. Desta forma, mprF mostrou afetar a resistência e suscetibilidade à moenomicina e vancomicina, resistência a defensinas humanas e eliminação de neutrófilos independentes de oxigênio e suscetibilidade à meticilina, oxacilina, bacitracina, gentamicina, beta-lactâmicos e peptídeos sintéticos, entre outros peptídeos antimicrobianos catiónicos.
       <p>  </p>
     </div>
