--- a/index.html
+++ b/index.html
@@ -136,6 +136,14 @@ body, html {
 Devido ao uso continuo de antibióticos ao longo dos anos, S. aureus adquiriu resistência contra MUP devido à mutação da proteína isoleucil-tRNA sintetase (IleS).  </p>
     </div>
     <div class="w3-second">
+      <div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;">
+  <h3 class="w3-center w3-xxlarge">Genes</h3>
+  <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
+    <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
+      <img src="https://webchem.ncbr.muni.cz/molstar-state" alt="genoma" style="width:100%">
+    </div>
+    <div class="w3-col l4 m9" style="margin-left:5%">
+      
       <b class="w3-xlarge">mprF</b>
       <p> Gene: mprF</p>
       <p> Proteína: Phosphatidylglycerol lysyltransferase</p>
