--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Devido ao uso continuo de antibióticos ao longo dos anos, S. aureus adquiriu re
   <h3 class="w3-center w3-xxlarge">Genes</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
-      <img src="https://webchem.ncbr.muni.cz/molstar-state" alt="genoma" style="width:100%">
+      <img src="mprF.png" alt="genoma" style="width:100%">
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
       
