--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@ body, html {
       <div class="topnav">
         <a href="#home"><i class="fas fa-home"></i>Home</a>
         <a href="#tuber"><i class="fas fa-bacterium"></i>    Mycobacterium tuberculosis</a>
+        <a href="#mura"><i class="fas fa-bacterium"></i>    murA</a>
+        <a href="#ppsd"><i class="fas fa-bacterium"></i>    ppsD</a>
         <a href="#aureus"><i class="fas fa-bacterium"></i>    Staphylococcus aureus</a>
       </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -72,34 +74,33 @@ body, html {
       <p>As bactérias do género Mycobacterium são bacilos (pleomórficos) gram positivo retos ou encurvados, cocobacilos, filamentosos ou formas ramificadas. Este organismo tem um comprimento de aproximadamente 1 a 10 μm, uma largura entre 0.2 e 0.6 μm e não formam esporo, flagelo ou cápsula. Apresenta uma parede complexa quanto à sua composição química, Lipídios de natureza hidrofóbica para a parede e ainda Bacilos Álcool Ácidos Resistentes (BAAR). Estas bactérias são intracelulares que infetam e proliferam-se no interior de macrófagos e linfócitos.</p>   
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
-      <div class="w3-second">
-        <b class="w3-xlarge">Tuberculose</b>
-        <p>A Tuberculose é a responsável pela morte de mais de 1 bilião de pessoas nos últimos 200 anos, esta doença cronica infeciosa é provocada pela bactéria Mycobacterium tuberculosis. Esta bactéria propaga-se pelo ar, quando uma pessoa infetada tosse, espirra, fala ou expele saliva podendo ser inalada por outro individuo. O sucesso da infeção e do desenvolvimento de tuberculose depende da sucessão de 4 passos: a fagocitose do bacilo, a multiplicação multicelular, o período de latência da infeção e da infeção ativa do pulmão.<br>
-          Atualmente a Tuberculose continua a ser responsável pelo maior número de mortes provocadas por um único agente infecioso, causando cerca de 10,4 milhões de novos casos e 1,7 milhão de mortes por ano. O controlo da Tuberculose é dificultado pelo facto de depender amplamente de uma técnica de diagnostico microscópica com 120 anos com baixa sensibilidade, de uma vacina com 100 anos com eficácia limitada e medicamentos com 40 e 60 anos.</p>
-        <b class="w3-xlarge">Sintomas</b>
-        <p>Os sintomas da tuberculose estão principalmente relacionados com o desenvolvimento da bactéria nos pulmões, podendo haver tosse seca e persistente com ou sem sangue, perda de peso, dor no peito ao tossir e dificuldade respiratória. No entanto, quando a bactéria desenvolve-se em outros órgãos, é possível que surjam outros sintomas como cansaço excessivo, suor noturno, febre e inchaço no local em que a bactéria está instalada.</p>
-        <b class="w3-xlarge">Ciclo de vida da bactéria</b>
-        <p>A resposta imunológica para a Mycobacterium tuberculosis não é completamente eficaz. Esta leva a bactéria para um estado latente, mas raramente a elimina. Infelizmente o estado latente da Mycobacterium tuberculosis é reversível, e a reativação da tuberculose é a fonte da maioria das transmissões (7). A infeção da tuberculose acontece em 4 etapas: A resposta inicial dos macrófagos, a etapa de crescimento, a etapa de controlo imunológico e a etapa do abcesso pulmonar. Estas quatro etapas ocorrem em cerca de 1 mês.</p>
-      </div>
+      <b class="w3-xlarge">Tuberculose</b>
+      <p>A Tuberculose é a responsável pela morte de mais de 1 bilião de pessoas nos últimos 200 anos, esta doença cronica infeciosa é provocada pela bactéria Mycobacterium tuberculosis. Esta bactéria propaga-se pelo ar, quando uma pessoa infetada tosse, espirra, fala ou expele saliva podendo ser inalada por outro individuo. O sucesso da infeção e do desenvolvimento de tuberculose depende da sucessão de 4 passos: a fagocitose do bacilo, a multiplicação multicelular, o período de latência da infeção e da infeção ativa do pulmão.<br>
+        Atualmente a Tuberculose continua a ser responsável pelo maior número de mortes provocadas por um único agente infecioso, causando cerca de 10,4 milhões de novos casos e 1,7 milhão de mortes por ano. O controlo da Tuberculose é dificultado pelo facto de depender amplamente de uma técnica de diagnostico microscópica com 120 anos com baixa sensibilidade, de uma vacina com 100 anos com eficácia limitada e medicamentos com 40 e 60 anos.</p>
+      <b class="w3-xlarge">Sintomas</b>
+      <p>Os sintomas da tuberculose estão principalmente relacionados com o desenvolvimento da bactéria nos pulmões, podendo haver tosse seca e persistente com ou sem sangue, perda de peso, dor no peito ao tossir e dificuldade respiratória. No entanto, quando a bactéria desenvolve-se em outros órgãos, é possível que surjam outros sintomas como cansaço excessivo, suor noturno, febre e inchaço no local em que a bactéria está instalada.</p>
+      <b class="w3-xlarge">Ciclo de vida da bactéria</b>
+      <p>A resposta imunológica para a Mycobacterium tuberculosis não é completamente eficaz. Esta leva a bactéria para um estado latente, mas raramente a elimina. Infelizmente o estado latente da Mycobacterium tuberculosis é reversível, e a reativação da tuberculose é a fonte da maioria das transmissões (7). A infeção da tuberculose acontece em 4 etapas: A resposta inicial dos macrófagos, a etapa de crescimento, a etapa de controlo imunológico e a etapa do abcesso pulmonar. Estas quatro etapas ocorrem em cerca de 1 mês.</p>
     </div>
   </div>
 </div>
 
 <!-- About Section -->
-<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;">
-  <h3 class="w3-center w3-xxlarge">Genes</h3>
+<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "mura">
+  <h3 class="w3-center w3-xxlarge">murA</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
       <img src="images/imagem_murA_MT_nowhite" alt="genoma" style="width:100%">
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
-      <b class="w3-xlarge">murA</b>
-      <p>Proteína: UDP-N-acetylglucosamine 1-carboxyvinyltransferase</p>  
-      <p>Gene: murA</p> 
-      <p>Organismo: Mycobacterium tuberculosis</p>
-      <p>Localização subcelular:  Citoplasma e Citosol</p>
-      <p>Função Biológica: Formação da parede celular. Adiciona enolpiruvil a UDP-N-acetilglucosamina.</p>
-      <b>Sequência</b>
+      <p><u><b>Gene:</b></u> murA</p> 
+      <p><u><b>Proteína:</b></u> UDP-N-acetylglucosamine 1-carboxyvinyltransferase</p>  
+      <p><u><b>Organismo:</b></u> Mycobacterium tuberculosis</p>
+      <p><u><b>Localização subcelular:</b></u> Citoplasma e Citosol</p>
+      <p><u><b>Definição:</b></u>  Mycobacterium tuberculosis murA confere resistência intrínseca à fosfomicina. Acredita-se que a presença de um resíduo de ácido aspártico no lugar da cisteína crítica na posição 117 que permite a ligação da fosfomicina seja responsável por esta resistência intrínseca.</p>
+      <p><u><b>Função Biológica:</b></u> Formação da parede celular. Adiciona enolpiruvil a UDP-N-acetilglucosamina.</p>
+      <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
+      <b><u>Sequência</u></b>
       <p>Comprimento: 418</p>
       <p>Massa(Da): 44,064</p>
       <p><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_000962.3?report=fasta&log$=seqview&format=text&from=1470321&to=1471577" target="_blank" >Sequência DNA</a></p>
@@ -109,10 +110,37 @@ body, html {
 </div>
 
 
+<div class="w3-container" style="min-height: 100%; padding-top: 80px;" id = "ppsd">
+  <h3 class="w3-center w3-xxlarge">ppsD</h3>
+  <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
+    <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:5%">
+      <img src="images/imagem_ppsD_MT_nowhite" alt="imagem ppsD" style="width:100%">
+    </div>
+    <div class="w3-col l4 m9" style="margin-left:5%">
+      <p><u><b>Proteína:</b></u> Phenolphthiocerol/phthiocerol polyketide synthase subunit D</p>  
+      <p><u><b>Gene:</b></u> ppsD</p> 
+      <p><u><b>Organismo:</b></u> Mycobacterium tuberculosis</p>
+      <p><u><b>Definição:</b></u> Mutações em ppsD podem contribuir ou conferir resistência à pirazinamida (antibiótico).</p>
+      <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
+      <b><u>Sequência</u></b>
+      <p>Comprimento: 1,827</p>
+      <p>Massa(Da): 193,315</p>
+      <p><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_000962.3?report=fasta&log$=seqview&format=text&from=3262248&to=3267731" target="_blank" >Sequência DNA</a></p>
+      <p><a href="https://www.uniprot.org/uniprot/P9WQE3.fasta" target="_blank" >Sequência da proteina</a></p>
+    </div>
+    <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
+      <b class="w3-xlarge">Função Biológica</b>
+      <p>Parte do complexo ppsABCDE envolvido na biossíntese do núcleo lipídico comum a fthiocerols e fenolphthiocerols por sucessivas adições de unidades extensoras de malonílico-CoA ou metilmalonil-CoA.<br>
+        PpsA pode aceitar como substrato as formas ativadas de grupos de icosanoyl (C20), docosanoyl (C22) ou lignoceroyl (C24) de FadD26, ou um (4-hidroxifenil)-C17 ou (4-hidroxifenil)-C19 acilélico gorduroso de FadD29.<br>
+        O PpsA inicia a biossíntese e estende seu substrato usando uma unidade extensora malonyl-CoA. As proteínas PpsB e PpsC adicionam a segunda e terceira unidades extensoras malonyl-CoA. PpsD adiciona uma unidade (R)-metilmalonil e PpsE adiciona uma segunda (R)-unidade de metilmalonil. A incorporação das unidades de metilmalonilo resulta na formação de dois grupos de metila ramificados no produto alongado.</p>
+    </div>
+  </div>
+</div>
+
 
 
 <!-- About Section -->
-<div class="w3-container" style="padding:128px 16px" id="aureus">
+<div class="w3-container w3-light-grey" style="padding:128px 16px" id="aureus">
   <h3 class="w3-center w3-xxlarge"> Staphylococcus aureus</h3>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:10%">
@@ -127,25 +155,61 @@ body, html {
   </div>
 </div>
 
-<div class="w3-container w3-light-grey" style="padding:128px 16px" id="tuber">
-  <h3 class="w3-center w3-xxlarge"> Staphylococcus aureus </h3>
-  <div class="w3-row-padding w3-center" style="margin-top:64px">
-    <div class="w3-second">
-      <b class="w3-xlarge">ileS</b>
-      <p> A função biológica desta protéina consiste em catalisar a ligação da isoleucina ao tRNA (Ile). IleS é um tipo de aminoácido-tRNA sintetase (AaRS) que está presente em S. aureus por meio do qual a mipirocina (MUP) mostra sua atividade antimicrobiana. Esta proteína pertence à classe I de tRNA sintetases, que são caracterizadas por uma ligação de ATP. O seu mecanismo de ação envolve interferir com a síntese de proteínas bacterianas por meio da inibição irreversível e competitiva de IleS. A inibição de IleS leva à acumulação da isoleucil-tRNA não carregado responsável pela síntese de pentafosfato de guanosina de alarmona. A resposta rigorosa da alarmona restringe a síntese de RNA. 
-Devido ao uso continuo de antibióticos ao longo dos anos, S. aureus adquiriu resistência contra MUP devido à mutação da proteína isoleucil-tRNA sintetase (IleS).  </p>
+
+<div class="w3-container" style="min-height: 100%; padding-top: 80px;" id = "ppsd">
+  <h3 class="w3-center w3-xxlarge">ppsD</h3>
+  <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
+    <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:5%">
+      <img src="images/imagem_ppsD_MT_nowhite" alt="imagem ppsD" style="width:100%">
     </div>
-    <div class="w3-second">
-      <b class="w3-xlarge">mprF</b>
-      <p> Proteína: Phosphatidylglycerol lysyltransferase
-          Gene: mprF
-          Organismo: Staphylococcus aureus
-          Localização subcelular: Membrana plasmática
-      <p> Esta protéina é responsável pela transferência de um grupo lisil de L-lisil-tRNA (Lys) para o fosfatidilglicerol ligado à membrana (PG), produzindo  lisilfosfatidilglicerol (LPG), um componente fundamental da membrana bacteriana com uma carga líquida positiva. A síntese do LPG contribui para a virulência da bactéria por estar envolvida no mecanismo de resistência aos peptídeos antimicrobianos catiónicos (CAMP) produzidos pelo sistema imunológico do hospedeiro e pelos microrganismos concorrentes. Mais precisamente, a modificação do fosfatidilglicerol aniónico com L-lisina carregada positivamente resulta na repulsão dos peptídeos. Desta forma, mprF mostrou afetar a resistência e suscetibilidade à moenomicina e vancomicina, resistência a defensinas humanas e eliminação de neutrófilos independentes de oxigênio e suscetibilidade à meticilina, oxacilina, bacitracina, gentamicina, beta-lactâmicos e peptídeos sintéticos, entre outros peptídeos antimicrobianos catiónicos.
-      <p>  </p>
+    <div class="w3-col l4 m9" style="margin-left:5%">
+      <p><u><b>Proteína:</b></u> Phenolphthiocerol/phthiocerol polyketide synthase subunit D</p>  
+      <p><u><b>Gene:</b></u> ppsD</p> 
+      <p><u><b>Organismo:</b></u> Mycobacterium tuberculosis</p>
+      <p><u><b>Definição:</b></u> Mutações em ppsD podem contribuir ou conferir resistência à pirazinamida (antibiótico).</p>
+      <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
+      <b><u>Sequência</u></b>
+      <p>Comprimento: 1,827</p>
+      <p>Massa(Da): 193,315</p>
+      <p><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_000962.3?report=fasta&log$=seqview&format=text&from=3262248&to=3267731" target="_blank" >Sequência DNA</a></p>
+      <p><a href="https://www.uniprot.org/uniprot/P9WQE3.fasta" target="_blank" >Sequência da proteina</a></p>
+    </div>
+    <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
+      <b class="w3-xlarge">Função Biológica</b>
+      <p>Parte do complexo ppsABCDE envolvido na biossíntese do núcleo lipídico comum a fthiocerols e fenolphthiocerols por sucessivas adições de unidades extensoras de malonílico-CoA ou metilmalonil-CoA.<br>
+        PpsA pode aceitar como substrato as formas ativadas de grupos de icosanoyl (C20), docosanoyl (C22) ou lignoceroyl (C24) de FadD26, ou um (4-hidroxifenil)-C17 ou (4-hidroxifenil)-C19 acilélico gorduroso de FadD29.<br>
+        O PpsA inicia a biossíntese e estende seu substrato usando uma unidade extensora malonyl-CoA. As proteínas PpsB e PpsC adicionam a segunda e terceira unidades extensoras malonyl-CoA. PpsD adiciona uma unidade (R)-metilmalonil e PpsE adiciona uma segunda (R)-unidade de metilmalonil. A incorporação das unidades de metilmalonilo resulta na formação de dois grupos de metila ramificados no produto alongado.</p>
     </div>
   </div>
 </div>
+
+<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "ppsd">
+  <h3 class="w3-center w3-xxlarge">ppsD</h3>
+  <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
+    <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:5%">
+      <img src="images/imagem_ppsD_MT_nowhite" alt="imagem ppsD" style="width:100%">
+    </div>
+    <div class="w3-col l4 m9" style="margin-left:5%">
+      <p><u><b>Proteína:</b></u> Phenolphthiocerol/phthiocerol polyketide synthase subunit D</p>  
+      <p><u><b>Gene:</b></u> ppsD</p> 
+      <p><u><b>Organismo:</b></u> Mycobacterium tuberculosis</p>
+      <p><u><b>Definição:</b></u> Mutações em ppsD podem contribuir ou conferir resistência à pirazinamida (antibiótico).</p>
+      <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
+      <b><u>Sequência</u></b>
+      <p>Comprimento: 1,827</p>
+      <p>Massa(Da): 193,315</p>
+      <p><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_000962.3?report=fasta&log$=seqview&format=text&from=3262248&to=3267731" target="_blank" >Sequência DNA</a></p>
+      <p><a href="https://www.uniprot.org/uniprot/P9WQE3.fasta" target="_blank" >Sequência da proteina</a></p>
+    </div>
+    <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
+      <b class="w3-xlarge">Função Biológica</b>
+      <p>Parte do complexo ppsABCDE envolvido na biossíntese do núcleo lipídico comum a fthiocerols e fenolphthiocerols por sucessivas adições de unidades extensoras de malonílico-CoA ou metilmalonil-CoA.<br>
+        PpsA pode aceitar como substrato as formas ativadas de grupos de icosanoyl (C20), docosanoyl (C22) ou lignoceroyl (C24) de FadD26, ou um (4-hidroxifenil)-C17 ou (4-hidroxifenil)-C19 acilélico gorduroso de FadD29.<br>
+        O PpsA inicia a biossíntese e estende seu substrato usando uma unidade extensora malonyl-CoA. As proteínas PpsB e PpsC adicionam a segunda e terceira unidades extensoras malonyl-CoA. PpsD adiciona uma unidade (R)-metilmalonil e PpsE adiciona uma segunda (R)-unidade de metilmalonil. A incorporação das unidades de metilmalonilo resulta na formação de dois grupos de metila ramificados no produto alongado.</p>
+    </div>
+  </div>
+</div>
+
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
