--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@ body, html {
 
 
 <div class="w3-container" style="min-height: 100%; padding-top: 80px;" id = "ppsd">
-  <h3 class="w3-center w3-xxlarge">ppsD</h3>
+  <h3 class="w3-center w3-xxlarge">ileS</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:5%">
-      <img src="images/imagem_ppsD_MT_nowhite" alt="imagem ppsD" style="width:100%">
+      <img src="images/imagem_ileS_SA" alt="imagem ppsD" style="width:100%">
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
       <p><u><b>Proteína:</b></u> Phenolphthiocerol/phthiocerol polyketide synthase subunit D</p>  
@@ -184,7 +184,7 @@ body, html {
 </div>
 
 <div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "ppsd">
-  <h3 class="w3-center w3-xxlarge">ppsD</h3>
+  <h3 class="w3-center w3-xxlarge">mprF</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:5%">
       <img src="images/imagem_ppsD_MT_nowhite" alt="imagem ppsD" style="width:100%">
