--- a/index.html
+++ b/index.html
@@ -160,25 +160,23 @@ body, html {
   <h3 class="w3-center w3-xxlarge">ileS</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:5%">
-      <img src="images/imagem_ileS_SA" alt="imagem ppsD" style="width:100%">
+      <img src="images/imagem_ileS_SA" alt="imagem ileS" style="width:100%">
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
-      <p><u><b>Proteína:</b></u> Phenolphthiocerol/phthiocerol polyketide synthase subunit D</p>  
-      <p><u><b>Gene:</b></u> ppsD</p> 
-      <p><u><b>Organismo:</b></u> Mycobacterium tuberculosis</p>
-      <p><u><b>Definição:</b></u> Mutações em ppsD podem contribuir ou conferir resistência à pirazinamida (antibiótico).</p>
+      <p><u><b>Proteína:</b></u> Isoleucine-tRNA ligase</p>  
+      <p><u><b>Gene:</b></u> ileS</p> 
+      <p><u><b>Organismo:</b></u> <span class="emphasized"> Staphylococcus aureus</span></p>
+      <p><u><b>Definição:</b></u> Identifica mutações para a isoleucil-tRNA sintetase em Staphylococcus aureus que conferem resistência à mupirocina.</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
       <b><u>Sequência</u></b>
-      <p>Comprimento: 1,827</p>
-      <p>Massa(Da): 193,315</p>
-      <p><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_000962.3?report=fasta&log$=seqview&format=text&from=3262248&to=3267731" target="_blank" >Sequência DNA</a></p>
-      <p><a href="https://www.uniprot.org/uniprot/P9WQE3.fasta" target="_blank" >Sequência da proteina</a></p>
+      <p>Comprimento: 917</p>
+      <p>Massa(Da): 104,885</p>
+      <p><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_007795.1?report=fasta&log$=seqview&format=text&from=1107130&to=1109883" target="_blank" >Sequência DNA</a></p>
+      <p><a href="https://www.uniprot.org/uniprot/P41972.fasta" target="_blank" >Sequência da proteina</a></p>
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Função Biológica</b>
-      <p>Parte do complexo ppsABCDE envolvido na biossíntese do núcleo lipídico comum a fthiocerols e fenolphthiocerols por sucessivas adições de unidades extensoras de malonílico-CoA ou metilmalonil-CoA.<br>
-        PpsA pode aceitar como substrato as formas ativadas de grupos de icosanoyl (C20), docosanoyl (C22) ou lignoceroyl (C24) de FadD26, ou um (4-hidroxifenil)-C17 ou (4-hidroxifenil)-C19 acilélico gorduroso de FadD29.<br>
-        O PpsA inicia a biossíntese e estende seu substrato usando uma unidade extensora malonyl-CoA. As proteínas PpsB e PpsC adicionam a segunda e terceira unidades extensoras malonyl-CoA. PpsD adiciona uma unidade (R)-metilmalonil e PpsE adiciona uma segunda (R)-unidade de metilmalonil. A incorporação das unidades de metilmalonilo resulta na formação de dois grupos de metila ramificados no produto alongado.</p>
+      <p>Catalisa a ligação da isoleucina ao tRNA (Ile). Como o IleRS pode inadvertidamente acomodar e processar aminoácidos estruturalmente semelhantes, como a valina, para evitar tais erros, ele possui duas atividades de edição dependentes de tRNA (Ile) distintas adicionais. Uma atividade é designada como edição 'pré-transferência' e envolve a hidrólise do Val-AMP ativado. A outra atividade é designada edição 'pós-transferência' e envolve a desacilação de Val-tRNA (Ile) mal descarregado (por similaridade).</p>
     </div>
   </div>
 </div>
