--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@ body, html {
         <a href="#mura"><i class="fas fa-bacterium"></i>    murA</a>
         <a href="#ppsd"><i class="fas fa-bacterium"></i>    ppsD</a>
         <a href="#aureus"><i class="fas fa-bacterium"></i>    Staphylococcus aureus</a>
+        <a href="#ileS"><i class="fas fa-bacterium"></i>    ileS</a>
+        <a href="#mprF"><i class="fas fa-bacterium"></i>    mprF</a>
       </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
   </div>
@@ -156,11 +158,11 @@ body, html {
 </div>
 
 
-<div class="w3-container" style="min-height: 100%; padding-top: 80px;" id = "ppsd">
+<div class="w3-container" style="min-height: 100%; padding-top: 80px;" id = "ileS">
   <h3 class="w3-center w3-xxlarge">ileS</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:5%">
-      <img src="images/imagem_ileS_SA" alt="imagem ileS" style="width:100%">
+      <img src="images/imagem_ileS_SA.png" alt="imagem ileS" style="width:100%">
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
       <p><u><b>Proteína:</b></u> Isoleucine-tRNA ligase</p>  
@@ -181,7 +183,7 @@ body, html {
   </div>
 </div>
 
-<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "ppsd">
+<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "mprF">
   <h3 class="w3-center w3-xxlarge">mprF</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:5%">
