--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ body, html {
     <div class="w3-col l4 m9" style="margin-left:5%">
       <p><u><b>Gene:</b></u> murA</p> 
       <p><u><b>Proteína:</b></u> UDP-N-acetylglucosamine 1-carboxyvinyltransferase</p>  
-      <p><u><b>Organismo:</b></u> Mycobacterium tuberculosis</p>
+      <p><u><b>Organismo:</b></u><i> Mycobacterium tuberculosis</i></p>
       <p><u><b>Localização subcelular:</b></u> Citoplasma e Citosol</p>
       <p><u><b>Definição:</b></u>  Mycobacterium tuberculosis murA confere resistência intrínseca à fosfomicina. Acredita-se que a presença de um resíduo de ácido aspártico no lugar da cisteína crítica na posição 117 que permite a ligação da fosfomicina seja responsável por esta resistência intrínseca.</p>
       <p><u><b>Função Biológica:</b></u> Formação da parede celular. Adiciona enolpiruvil a UDP-N-acetilglucosamina.</p>
@@ -121,7 +121,7 @@ body, html {
     <div class="w3-col l4 m9" style="margin-left:5%">
       <p><u><b>Proteína:</b></u> Phenolphthiocerol/phthiocerol polyketide synthase subunit D</p>  
       <p><u><b>Gene:</b></u> ppsD</p> 
-      <p><u><b>Organismo:</b></u> Mycobacterium tuberculosis</p>
+      <p><u><b>Organismo:</b></u><i> Mycobacterium tuberculosis</i></p>
       <p><u><b>Definição:</b></u> Mutações em ppsD podem contribuir ou conferir resistência à pirazinamida (antibiótico).</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
       <b><u>Sequência</u></b>
@@ -167,7 +167,7 @@ body, html {
     <div class="w3-col l4 m9" style="margin-left:5%">
       <p><u><b>Proteína:</b></u> Isoleucine-tRNA ligase</p>  
       <p><u><b>Gene:</b></u> ileS</p> 
-      <p><u><b>Organismo:</b></u> <span class="emphasized"> Staphylococcus aureus</span></p>
+      <p><u><b>Organismo:</b></u> <i> Staphylococcus aureus</i></p>
       <p><u><b>Definição:</b></u> Identifica mutações para a isoleucil-tRNA sintetase em Staphylococcus aureus que conferem resistência à mupirocina.</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
       <b><u>Sequência</u></b>
@@ -187,25 +187,23 @@ body, html {
   <h3 class="w3-center w3-xxlarge">mprF</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:5%">
-      <img src="images/imagem_ppsD_MT_nowhite" alt="imagem ppsD" style="width:100%">
+      <img src="image/imagem_mprF_SA.png" alt="imagem mprF" style="width:100%">
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
-      <p><u><b>Proteína:</b></u> Phenolphthiocerol/phthiocerol polyketide synthase subunit D</p>  
-      <p><u><b>Gene:</b></u> ppsD</p> 
-      <p><u><b>Organismo:</b></u> Mycobacterium tuberculosis</p>
+      <p><u><b>Proteína:</b></u><i> Phosphatidylglycerol lysyltransferase</i></p>  
+      <p><u><b>Gene:</b></u> mprF</p> 
+      <p><u><b>Organismo:</b></u> Staphylococcus aureus</p>
       <p><u><b>Definição:</b></u> Mutações em ppsD podem contribuir ou conferir resistência à pirazinamida (antibiótico).</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
       <b><u>Sequência</u></b>
-      <p>Comprimento: 1,827</p>
-      <p>Massa(Da): 193,315</p>
-      <p><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_000962.3?report=fasta&log$=seqview&format=text&from=3262248&to=3267731" target="_blank" >Sequência DNA</a></p>
-      <p><a href="https://www.uniprot.org/uniprot/P9WQE3.fasta" target="_blank" >Sequência da proteina</a></p>
+      <p>Comprimento: 840</p>
+      <p>Massa(Da): 96,866</p>
+      <p><a href="https://www.ncbi.nlm.nih.gov/nuccore/HM140977.1?report=fasta&log$=seqview&format=text" target="_blank" >Sequência DNA</a></p>
+      <p><a href="https://www.uniprot.org/uniprot/Q2G2M2.fasta" target="_blank" >Sequência da proteina</a></p>
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Função Biológica</b>
-      <p>Parte do complexo ppsABCDE envolvido na biossíntese do núcleo lipídico comum a fthiocerols e fenolphthiocerols por sucessivas adições de unidades extensoras de malonílico-CoA ou metilmalonil-CoA.<br>
-        PpsA pode aceitar como substrato as formas ativadas de grupos de icosanoyl (C20), docosanoyl (C22) ou lignoceroyl (C24) de FadD26, ou um (4-hidroxifenil)-C17 ou (4-hidroxifenil)-C19 acilélico gorduroso de FadD29.<br>
-        O PpsA inicia a biossíntese e estende seu substrato usando uma unidade extensora malonyl-CoA. As proteínas PpsB e PpsC adicionam a segunda e terceira unidades extensoras malonyl-CoA. PpsD adiciona uma unidade (R)-metilmalonil e PpsE adiciona uma segunda (R)-unidade de metilmalonil. A incorporação das unidades de metilmalonilo resulta na formação de dois grupos de metila ramificados no produto alongado.</p>
+      <p>Esta proteína é responsável pela transferência de um grupo lisil de L-lisil-tRNA (Lys) para o fosfatidilglicerol ligado à membrana (PG), produzindo  lisilfosfatidilglicerol (LPG), um componente fundamental da membrana bacteriana com uma carga líquida positiva. A síntese do LPG contribui para a virulência da bactéria por estar envolvida no mecanismo de resistência aos peptídeos antimicrobianos catiónicos (CAMP) produzidos pelo sistema imunológico do hospedeiro e pelos microrganismos concorrentes. Mais precisamente, a modificação do fosfatidilglicerol aniónico com L-lisina carregada positivamente resulta na repulsão dos peptídeos. Desta forma, mprF mostrou afetar a resistência e suscetibilidade à moenomicina e vancomicina, resistência a defensinas humanas e eliminação de neutrófilos independentes de oxigênio e suscetibilidade à meticilina, oxacilina, bacitracina, gentamicina, beta-lactâmicos e peptídeos sintéticos, entre outros peptídeos antimicrobianos catiónicos.</p>
     </div>
   </div>
 </div>
