--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ body, html {
   <h3 class="w3-center w3-xxlarge">mprF</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:5%">
-      <img src="image/imagem_mprF_SA.png" alt="imagem mprF" style="width:100%">
+      <img src="images/imagem_mprF_SA.png" alt="imagem mprF" style="width:100%">
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
       <p><u><b>Proteína:</b></u><i> Phosphatidylglycerol lysyltransferase</i></p>  
