--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body, html {
 </div>
 
 <!-- About Section -->
-<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "mura">
+<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "murA">
   <h3 class="w3-center w3-xxlarge">murA</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
@@ -115,7 +115,7 @@ body, html {
 <div class="w3-container" style="min-height: 100%; padding-top: 80px;" id = "ppsd">
   <h3 class="w3-center w3-xxlarge">ppsD</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
-    <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:5%">
+    <div class="w3-col l6 m6 w3-margin-bottom" style="margin-left:5%">
       <img src="images/imagem_ppsD_MT_nowhite" alt="imagem ppsD" style="width:100%">
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
@@ -190,7 +190,7 @@ body, html {
       <img src="images/imagem_mprF_SA.png" alt="imagem mprF" style="width:100%">
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
-      <p><u><b>Proteína:</b></u><i> Phosphatidylglycerol lysyltransferase</i></p>  
+      <p><u><b>Proteína:</b></u> <i> Phosphatidylglycerol lysyltransferase</i></p>  
       <p><u><b>Gene:</b></u> mprF</p> 
       <p><u><b>Organismo:</b></u> Staphylococcus aureus</p>
       <p><u><b>Definição:</b></u> Mutações em ppsD podem contribuir ou conferir resistência à pirazinamida (antibiótico).</p>
