--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@ body, html {
       <img src="images/imagem_mprF_SA.png" alt="imagem mprF" style="width:100%">
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
-      <p><u><b>Proteína:</b></u> <i> Phosphatidylglycerol lysyltransferase</i></p>  
+      <p><u><b>Proteína:</b></u> Phosphatidylglycerol lysyltransferase</p>  
       <p><u><b>Gene:</b></u> mprF</p> 
-      <p><u><b>Organismo:</b></u> Staphylococcus aureus</p>
+      <p><u><b>Organismo:</b></u><i> Staphylococcus aureus</i></p>
       <p><u><b>Definição:</b></u> Mutações em ppsD podem contribuir ou conferir resistência à pirazinamida (antibiótico).</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
       <b><u>Sequência</u></b>
