--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body, html {
 </div>
 
 <!-- About Section -->
-<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "murA">
+<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "mura">
   <h3 class="w3-center w3-xxlarge">murA</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
