--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ body, html {
        <img src="images/aureus_e_tabela.png" alt="aureus_img" style="width:100%">
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
+      <b class="w3-xlarge">Características da bactéria</b>
       <p> Staphylococcus aureus (S. aureus) é uma bactéria esférica gram-positiva, da família Micrococcaceae, responsável por várias infeções locais e sistémicas em seres humanos. Estas bactérias possuem aproximadamente um diâmetro de 0,5 a 1,5 µm e são caracterizadas pela forma de cocos, falta de mobilidade e por serem não-esporuladas.</h4> 
       <p> Os seres humanos são um reservatório natural de S. aureus e estima-se que cerca de 30% a 50% da população adulta saudável se encontre infetada, dos quais 10% a 20% são infetados de forma persistente. Estas pessoas apresentam um risco mais elevado de infeções subsequentes. </p>
       <p> Por ser um agente patogénico oportunista, esta bactéria constituí uma das principais causas de doenças nosocomiais, tais como: bacteremia-sepse, endocardite, pneumonia, osteomielite, artrite e doenças de pele. </p>   
