--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@ body, html {
         <a href="#mura"><i class="fas fa-bacterium"></i>    murA</a>
         <a href="#ppsd"><i class="fas fa-bacterium"></i>    ppsD</a>
         <a href="#aureus"><i class="fas fa-bacterium"></i>    Staphylococcus aureus</a>
+        <a href="#ileS"><i class="fas fa-bacterium"></i>    ileS</a>
+        <a href="#mprF"><i class="fas fa-bacterium"></i>    mprF</a>
       </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
   </div>
@@ -95,16 +97,18 @@ body, html {
     <div class="w3-col l4 m9" style="margin-left:5%">
       <p><u><b>Gene:</b></u> murA</p> 
       <p><u><b>Proteína:</b></u> UDP-N-acetylglucosamine 1-carboxyvinyltransferase</p>  
-      <p><u><b>Organismo:</b></u> Mycobacterium tuberculosis</p>
+      <p><u><b>Organismo:</b></u><i> Mycobacterium tuberculosis</i></p>
       <p><u><b>Localização subcelular:</b></u> Citoplasma e Citosol</p>
       <p><u><b>Definição:</b></u>  Mycobacterium tuberculosis murA confere resistência intrínseca à fosfomicina. Acredita-se que a presença de um resíduo de ácido aspártico no lugar da cisteína crítica na posição 117 que permite a ligação da fosfomicina seja responsável por esta resistência intrínseca.</p>
       <p><u><b>Função Biológica:</b></u> Formação da parede celular. Adiciona enolpiruvil a UDP-N-acetilglucosamina.</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
-      <b><u>Sequência</u></b>
-      <p>Comprimento: 418</p>
-      <p>Massa(Da): 44,064</p>
-      <p><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_000962.3?report=fasta&log$=seqview&format=text&from=1470321&to=1471577" target="_blank" >Sequência DNA</a></p>
-      <p><a href="https://www.uniprot.org/uniprot/P9WJM1.fasta" target="_blank" >Sequência da proteina</a></p>
+      <b><u>Sequência:</u></b>
+      <ul>
+        <li>Comprimento: 418</li>
+        <li>Massa(Da): 44,064</li>
+        <li><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_000962.3?report=fasta&log$=seqview&format=text&from=1470321&to=1471577" target="_blank" >Sequência DNA</a></li>
+        <li><a href="https://www.uniprot.org/uniprot/P9WJM1.fasta" target="_blank" >Sequência da proteina</a></li>
+      </ul>
     </div>
   </div>
 </div>
@@ -113,20 +117,22 @@ body, html {
 <div class="w3-container" style="min-height: 100%; padding-top: 80px;" id = "ppsd">
   <h3 class="w3-center w3-xxlarge">ppsD</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
-    <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:5%">
+    <div class="w3-col l6 m6 w3-margin-bottom" style="margin-left:5%">
       <img src="images/imagem_ppsD_MT_nowhite" alt="imagem ppsD" style="width:100%">
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
       <p><u><b>Proteína:</b></u> Phenolphthiocerol/phthiocerol polyketide synthase subunit D</p>  
       <p><u><b>Gene:</b></u> ppsD</p> 
-      <p><u><b>Organismo:</b></u> Mycobacterium tuberculosis</p>
+      <p><u><b>Organismo:</b></u><i> Mycobacterium tuberculosis</i></p>
       <p><u><b>Definição:</b></u> Mutações em ppsD podem contribuir ou conferir resistência à pirazinamida (antibiótico).</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
       <b><u>Sequência</u></b>
-      <p>Comprimento: 1,827</p>
-      <p>Massa(Da): 193,315</p>
-      <p><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_000962.3?report=fasta&log$=seqview&format=text&from=3262248&to=3267731" target="_blank" >Sequência DNA</a></p>
-      <p><a href="https://www.uniprot.org/uniprot/P9WQE3.fasta" target="_blank" >Sequência da proteina</a></p>
+      <ul>
+        <li>Comprimento: 1,827</li>
+        <li>Massa(Da): 193,315</li>
+        <li><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_000962.3?report=fasta&log$=seqview&format=text&from=3262248&to=3267731" target="_blank" >Sequência DNA</a></li>
+        <li><a href="https://www.uniprot.org/uniprot/P9WQE3.fasta" target="_blank" >Sequência da proteina</a></li>
+      </ul>
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Função Biológica</b>
@@ -143,7 +149,7 @@ body, html {
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="aureus">
   <h3 class="w3-center w3-xxlarge"> Staphylococcus aureus</h3>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
-    <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:10%">
+    <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
        <img src="images/aureus_e_tabela.png" alt="aureus_img" style="width:100%">
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
@@ -156,56 +162,56 @@ body, html {
 </div>
 
 
-<div class="w3-container" style="min-height: 100%; padding-top: 80px;" id = "ppsd">
-  <h3 class="w3-center w3-xxlarge">ppsD</h3>
+<div class="w3-container" style="min-height: 100%; padding-top: 80px;" id = "ileS">
+  <h3 class="w3-center w3-xxlarge">ileS</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
-    <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:5%">
-      <img src="images/imagem_ppsD_MT_nowhite" alt="imagem ppsD" style="width:100%">
+    <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:15%">
+      <img src="images/imagem_ileS_SA.png" alt="imagem ileS" style="width:100%">
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
-      <p><u><b>Proteína:</b></u> Phenolphthiocerol/phthiocerol polyketide synthase subunit D</p>  
-      <p><u><b>Gene:</b></u> ppsD</p> 
-      <p><u><b>Organismo:</b></u> Mycobacterium tuberculosis</p>
-      <p><u><b>Definição:</b></u> Mutações em ppsD podem contribuir ou conferir resistência à pirazinamida (antibiótico).</p>
+      <p><u><b>Proteína:</b></u> Isoleucine-tRNA ligase</p>  
+      <p><u><b>Gene:</b></u> ileS</p> 
+      <p><u><b>Organismo:</b></u> <i> Staphylococcus aureus</i></p>
+      <p><u><b>Definição:</b></u> Identifica mutações para a isoleucil-tRNA sintetase em Staphylococcus aureus que conferem resistência à mupirocina.</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
       <b><u>Sequência</u></b>
-      <p>Comprimento: 1,827</p>
-      <p>Massa(Da): 193,315</p>
-      <p><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_000962.3?report=fasta&log$=seqview&format=text&from=3262248&to=3267731" target="_blank" >Sequência DNA</a></p>
-      <p><a href="https://www.uniprot.org/uniprot/P9WQE3.fasta" target="_blank" >Sequência da proteina</a></p>
+      <ul>
+        <li>Comprimento: 917</li>
+        <li>Massa(Da): 104,885</li>
+        <li><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_007795.1?report=fasta&log$=seqview&format=text&from=1107130&to=1109883" target="_blank" >Sequência DNA</a></li>
+        <li><a href="https://www.uniprot.org/uniprot/P41972.fasta" target="_blank" >Sequência da proteina</a></li>
+      </ul>
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Função Biológica</b>
-      <p>Parte do complexo ppsABCDE envolvido na biossíntese do núcleo lipídico comum a fthiocerols e fenolphthiocerols por sucessivas adições de unidades extensoras de malonílico-CoA ou metilmalonil-CoA.<br>
-        PpsA pode aceitar como substrato as formas ativadas de grupos de icosanoyl (C20), docosanoyl (C22) ou lignoceroyl (C24) de FadD26, ou um (4-hidroxifenil)-C17 ou (4-hidroxifenil)-C19 acilélico gorduroso de FadD29.<br>
-        O PpsA inicia a biossíntese e estende seu substrato usando uma unidade extensora malonyl-CoA. As proteínas PpsB e PpsC adicionam a segunda e terceira unidades extensoras malonyl-CoA. PpsD adiciona uma unidade (R)-metilmalonil e PpsE adiciona uma segunda (R)-unidade de metilmalonil. A incorporação das unidades de metilmalonilo resulta na formação de dois grupos de metila ramificados no produto alongado.</p>
+      <p>Catalisa a ligação da isoleucina ao tRNA (Ile). Como o IleRS pode inadvertidamente acomodar e processar aminoácidos estruturalmente semelhantes, como a valina, para evitar tais erros, ele possui duas atividades de edição dependentes de tRNA (Ile) distintas adicionais. Uma atividade é designada como edição 'pré-transferência' e envolve a hidrólise do Val-AMP ativado. A outra atividade é designada edição 'pós-transferência' e envolve a desacilação de Val-tRNA (Ile) mal descarregado (por similaridade).</p>
     </div>
   </div>
 </div>
 
-<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "ppsd">
-  <h3 class="w3-center w3-xxlarge">ppsD</h3>
+<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "mprF">
+  <h3 class="w3-center w3-xxlarge">mprF</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:5%">
-      <img src="images/imagem_ppsD_MT_nowhite" alt="imagem ppsD" style="width:100%">
+      <img src="images/imagem_mprF_SA.png" alt="imagem mprF" style="width:100%">
     </div>
     <div class="w3-col l4 m9" style="margin-left:5%">
-      <p><u><b>Proteína:</b></u> Phenolphthiocerol/phthiocerol polyketide synthase subunit D</p>  
-      <p><u><b>Gene:</b></u> ppsD</p> 
-      <p><u><b>Organismo:</b></u> Mycobacterium tuberculosis</p>
+      <p><u><b>Proteína:</b></u> Phosphatidylglycerol lysyltransferase</p>  
+      <p><u><b>Gene:</b></u> mprF</p> 
+      <p><u><b>Organismo:</b></u><i> Staphylococcus aureus</i></p>
       <p><u><b>Definição:</b></u> Mutações em ppsD podem contribuir ou conferir resistência à pirazinamida (antibiótico).</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
       <b><u>Sequência</u></b>
-      <p>Comprimento: 1,827</p>
-      <p>Massa(Da): 193,315</p>
-      <p><a href="https://www.ncbi.nlm.nih.gov/nuccore/NC_000962.3?report=fasta&log$=seqview&format=text&from=3262248&to=3267731" target="_blank" >Sequência DNA</a></p>
-      <p><a href="https://www.uniprot.org/uniprot/P9WQE3.fasta" target="_blank" >Sequência da proteina</a></p>
+      <ul>
+        <li>Comprimento: 840</li>
+        <li>Massa(Da): 96,866</li>
+        <li><a href="https://www.ncbi.nlm.nih.gov/nuccore/HM140977.1?report=fasta&log$=seqview&format=text" target="_blank" >Sequência DNA</a></li>
+        <li><a href="https://www.uniprot.org/uniprot/Q2G2M2.fasta" target="_blank" >Sequência da proteina</a></li>
+      </ul>
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Função Biológica</b>
-      <p>Parte do complexo ppsABCDE envolvido na biossíntese do núcleo lipídico comum a fthiocerols e fenolphthiocerols por sucessivas adições de unidades extensoras de malonílico-CoA ou metilmalonil-CoA.<br>
-        PpsA pode aceitar como substrato as formas ativadas de grupos de icosanoyl (C20), docosanoyl (C22) ou lignoceroyl (C24) de FadD26, ou um (4-hidroxifenil)-C17 ou (4-hidroxifenil)-C19 acilélico gorduroso de FadD29.<br>
-        O PpsA inicia a biossíntese e estende seu substrato usando uma unidade extensora malonyl-CoA. As proteínas PpsB e PpsC adicionam a segunda e terceira unidades extensoras malonyl-CoA. PpsD adiciona uma unidade (R)-metilmalonil e PpsE adiciona uma segunda (R)-unidade de metilmalonil. A incorporação das unidades de metilmalonilo resulta na formação de dois grupos de metila ramificados no produto alongado.</p>
+      <p>Esta proteína é responsável pela transferência de um grupo lisil de L-lisil-tRNA (Lys) para o fosfatidilglicerol ligado à membrana (PG), produzindo  lisilfosfatidilglicerol (LPG), um componente fundamental da membrana bacteriana com uma carga líquida positiva. A síntese do LPG contribui para a virulência da bactéria por estar envolvida no mecanismo de resistência aos peptídeos antimicrobianos catiónicos (CAMP) produzidos pelo sistema imunológico do hospedeiro e pelos microrganismos concorrentes. Mais precisamente, a modificação do fosfatidilglicerol aniónico com L-lisina carregada positivamente resulta na repulsão dos peptídeos. Desta forma, mprF mostrou afetar a resistência e suscetibilidade à moenomicina e vancomicina, resistência a defensinas humanas e eliminação de neutrófilos independentes de oxigênio e suscetibilidade à meticilina, oxacilina, bacitracina, gentamicina, beta-lactâmicos e peptídeos sintéticos, entre outros peptídeos antimicrobianos catiónicos.</p>
     </div>
   </div>
 </div>
@@ -224,8 +230,6 @@ function onClick(element) {
   var captionText = document.getElementById("caption");
   captionText.innerHTML = element.alt;
 }
-
-
 // Toggle between showing and hiding the sidebar when clicking the menu icon
 var mySidebar = document.getElementById("mySidebar");
 
